lacan/y.output
State 10 conflicts: 3 shift/reduce


Grammar

    0 $accept: chains $end

    1 chains: chains chain
    2       | chain

    3 chain: RELATION chain
    4      | chain '/' chain
    5      | chain '$' chain
    6      | chain '+' chain
    7      | unconscious

    8 unconscious: SIGNIFIER subject

    9 subject: SUBJECT
   10        | DIVIDED_SUBJECT
   11        | OTHER


Terminals, with rules where they appear

$end (0) 0
'$' (36) 5
'+' (43) 6
'/' (47) 4
error (256)
SIGNIFIER (258) 8
SUBJECT (259) 9
DIVIDED_SUBJECT (260) 10
OTHER (261) 11
RELATION (262) 3


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
chains (12)
    on left: 1 2, on right: 0 1
chain (13)
    on left: 3 4 5 6 7, on right: 1 2 3 4 5 6
unconscious (14)
    on left: 8, on right: 7
subject (15)
    on left: 9 10 11, on right: 8


state 0

    0 $accept: . chains $end

    SIGNIFIER  shift, and go to state 1
    RELATION   shift, and go to state 2

    chains       go to state 3
    chain        go to state 4
    unconscious  go to state 5


state 1

    8 unconscious: SIGNIFIER . subject

    SUBJECT          shift, and go to state 6
    DIVIDED_SUBJECT  shift, and go to state 7
    OTHER            shift, and go to state 8

    subject  go to state 9


state 2

    3 chain: RELATION . chain

    SIGNIFIER  shift, and go to state 1
    RELATION   shift, and go to state 2

    chain        go to state 10
    unconscious  go to state 5


state 3

    0 $accept: chains . $end
    1 chains: chains . chain

    $end       shift, and go to state 11
    SIGNIFIER  shift, and go to state 1
    RELATION   shift, and go to state 2

    chain        go to state 12
    unconscious  go to state 5


state 4

    2 chains: chain .
    4 chain: chain . '/' chain
    5      | chain . '$' chain
    6      | chain . '+' chain

    '/'  shift, and go to state 13
    '$'  shift, and go to state 14
    '+'  shift, and go to state 15

    $default  reduce using rule 2 (chains)


state 5

    7 chain: unconscious .

    $default  reduce using rule 7 (chain)


state 6

    9 subject: SUBJECT .

    $default  reduce using rule 9 (subject)


state 7

   10 subject: DIVIDED_SUBJECT .

    $default  reduce using rule 10 (subject)


state 8

   11 subject: OTHER .

    $default  reduce using rule 11 (subject)


state 9

    8 unconscious: SIGNIFIER subject .

    $default  reduce using rule 8 (unconscious)


state 10

    3 chain: RELATION chain .
    4      | chain . '/' chain
    5      | chain . '$' chain
    6      | chain . '+' chain

    '/'  shift, and go to state 13
    '$'  shift, and go to state 14
    '+'  shift, and go to state 15

    '/'       [reduce using rule 3 (chain)]
    '$'       [reduce using rule 3 (chain)]
    '+'       [reduce using rule 3 (chain)]
    $default  reduce using rule 3 (chain)


state 11

    0 $accept: chains $end .

    $default  accept


state 12

    1 chains: chains chain .
    4 chain: chain . '/' chain
    5      | chain . '$' chain
    6      | chain . '+' chain

    '/'  shift, and go to state 13
    '$'  shift, and go to state 14
    '+'  shift, and go to state 15

    $default  reduce using rule 1 (chains)


state 13

    4 chain: chain '/' . chain

    SIGNIFIER  shift, and go to state 1
    RELATION   shift, and go to state 2

    chain        go to state 16
    unconscious  go to state 5


state 14

    5 chain: chain '$' . chain

    SIGNIFIER  shift, and go to state 1
    RELATION   shift, and go to state 2

    chain        go to state 17
    unconscious  go to state 5


state 15

    6 chain: chain '+' . chain

    SIGNIFIER  shift, and go to state 1
    RELATION   shift, and go to state 2

    chain        go to state 18
    unconscious  go to state 5


state 16

    4 chain: chain . '/' chain
    4      | chain '/' chain .
    5      | chain . '$' chain
    6      | chain . '+' chain

    $default  reduce using rule 4 (chain)


state 17

    4 chain: chain . '/' chain
    5      | chain . '$' chain
    5      | chain '$' chain .
    6      | chain . '+' chain

    $default  reduce using rule 5 (chain)


state 18

    4 chain: chain . '/' chain
    5      | chain . '$' chain
    6      | chain . '+' chain
    6      | chain '+' chain .

    $default  reduce using rule 6 (chain)
